# dokan

./: .gitignore  Cargo.toml  README.md
assets/: nushell.txt
dokan_cli/: Cargo.toml
dokan_cli/src/: command.rs  lib.rs  util.rs
dokan_cli/src/command/: add.rs  cd.rs  list.rs  remove.rs
dokan_cli/src/util/: path_resolver.rs  project_formatter.rs
dokan_manager/: Cargo.toml
dokan_project_manager/: Cargo.toml
dokan_project_manager/src/: config.rs  lib.rs  project.rs  project_list.rs
dokan_project_manager/src/config/: project_list.rs
dokan_tool_cli/: Cargo.toml
dokan_tool_cli/src/: command.rs  lib.rs  script.rs
src/: command.rs  main.rs
src/command/: add.rs
